# profsouz

./: .gitignore
profcom/: .gitignore  README.md  app.py  config.py  forms.py  models.py  profsouz.spec  pyproject.toml  requirements-dev.txt  requirements.txt  shablon.xlsx  utils.py
profcom/migrations/versions/: 32986ec31ad5_add_finance_distribution.py  3cb02e51e987_add_phone_children_inventory_officers.py  46065ddb82d3_add_template_background_image.py  49c0f38c325b_add_pptx_template_fields.py  4fee4c896067_finance_module.py  689fb4385545_add_document_templates_and_member_awards.py  8dde0cb99f50_add_payout_categories.py  9693732e247e_initial.py  ea1e3d9707b6_add_organization_positions.py  ec480aba281a_add_dictionary.py
profcom/routes/: __init__.py  auth.py  awards.py  birthdays.py  events.py  finances.py  inventory.py  main.py  members.py  payouts.py  protocols.py  reports.py  settings.py
profcom/static/css/: style.css
profcom/static/js/: app.js  bootstrap.bundle.min.js  select-search.js
profcom/templates/: base.html  birthdays.html  dashboard.html  login.html  search.html  settings.html  timeline.html
profcom/templates/awards/: index.html  map.html  mass.html  print.html
profcom/templates/events/: add.html  detail.html  list.html
profcom/templates/finances/: add.html  edit.html  index.html  list.html  report.html
profcom/templates/inventory/: add.html  edit.html  list.html
profcom/templates/members/: add.html  committees.html  detail.html  edit.html  gifts.html  (+6 more)
profcom/tests/: conftest.py  test_models.py  test_routes.py  test_routes_extra.py
(+20 files in other folders)
