[project]
name = "profsouz"
version = "0.1.1"
description = "Учёт профсоюзной организации"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "black>=24.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | migrations
  | build
  | dist
)/
'''
